--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
 
   <script>
     const saunas = [
-      { name: "よこはま温泉（和光市）", map: "https://maps.google.com/?q=よこはま温泉 和光市", homepage: "" },
-      { name: "スパジアムジャポン（東久留米）", map: "https://maps.google.com/?q=スパジアムジャポン 東久留米", homepage: "" },
-      { name: "サウナ&カプセルホテル北欧（上野）", map: "https://maps.google.com/?q=サウナ 北欧 上野", homepage: "" },
-      { name: "サウナセンター（鶯谷）", map: "https://maps.google.com/?q=サウナセンター 鶯谷", homepage: "" },
-      { name: "かるまる池袋", map: "https://maps.google.com/?q=かるまる 池袋", homepage: "" },
+      { name: "カプセル&サウナ ロスコ(中里)", map: "https://maps.google.com/?q=カプセル&サウナ ロスコ", homepage: "https://www.rosco.tokyo/" },
+      { name: "ルーフトップサウナ(西荻南)", map: "https://maps.google.com/?q=ルーフトップサウナ", homepage: "https://rooftopsauna.jp/" },
+      { name: "スパジアムジャポン（東久留米）", map: "https://maps.google.com/?q=スパジアムジャポン 東久留米", homepage: "https://www.spajapo.com/" },
+      { name: "サウナ&カプセルホテル北欧（上野）", map: "https://maps.google.com/?q=サウナ 北欧 上野", homepage: "https://www.saunahokuou.com/" },
+      { name: "サウナセンター（鶯谷）", map: "https://maps.google.com/?q=サウナセンター 鶯谷", homepage: "https://sauna-center.jp/" },
+      { name: "かるまる池袋", map: "https://maps.google.com/?q=かるまる 池袋", homepage: "https://karumaru.jp/ikebukuro/" },
       { name: "タイムズ スパ・レスタ（池袋）", map: "https://maps.google.com/?q=タイムズ スパ レスタ 池袋", homepage: "" },
       { name: "新橋アスティル", map: "https://maps.google.com/?q=新橋 アスティル", homepage: "" },
       { name: "東京ドーム天然温泉 スパ ラクーア", map: "https://maps.google.com/?q=スパ ラクーア", homepage: "" },
