--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       { name: "両国湯屋江戸遊", map: "https://maps.google.com/?q=両国湯屋江戸遊", homepage: "" },
       { name: "光明泉（中目黒）", map: "https://maps.google.com/?q=光明泉 中目黒", homepage: "" },
       { name: "黄金湯（錦糸町）", map: "https://maps.google.com/?q=黄金湯 錦糸町", homepage: "" },
+      { name: "FUROBAKKA(富山)", map: "https://maps.google.com/?q=湯屋 FUROBAKKA", homepage: "https://furobakka.com/" },
 
       { name: "レンブラントキャビン & スパ新橋", map: "https://maps.google.com/?q=レンブラントキャビン+スパ新橋", homepage: "https://rembrandt-cabin.com/spa-shimbashi/" },
       { name: "King & Queen（所沢）", map: "https://maps.google.com/?q=King&Queen 所沢", homepage: "https://king-and-queen.site/" },
