--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <script>
     const saunas = [
-      {name:"湯乃泉 豊島園 庭の湯", map:"https://maps.google.com/?q=湯乃泉豊島園庭の湯", homepage:"https://www.niwanoyu.jp/"},
+      {name:"湯乃泉 豊島園 庭の湯", map:"https://maps.google.com/?q=湯乃泉豊島園庭の湯", homepage:"https://www.seibu-leisure.co.jp/niwanoyu/index.html/"},
       {name:"タイムズ スパ・レスタ(池袋)", map:"https://maps.google.com/?q=タイムズスパレスタ", homepage:"https://www.timesspa-resta.jp/"},
       {name:"かるまる池袋", map:"https://maps.google.com/?q=かるまる池袋", homepage:"https://www.karumarutt.com/"},
       {name:"スパジアムジャポン(東久留米)", map:"https://maps.google.com/?q=スパジアムジャポン", homepage:"https://spajapo.com/"},
