--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
     const saunas = [
       {name:"湯乃泉 豊島園 庭の湯", map:"https://maps.google.com/?q=湯乃泉豊島園庭の湯", homepage:"https://www.seibu-leisure.co.jp/niwanoyu/index.html/"},
       {name:"タイムズ スパ・レスタ(池袋)", map:"https://maps.google.com/?q=タイムズスパレスタ", homepage:"https://www.timesspa-resta.jp/"},
-      {name:"かるまる池袋", map:"https://maps.google.com/?q=かるまる池袋", homepage:"https://www.karumarutt.com/"},
+      {name:"かるまる池袋", map:"https://maps.google.com/?q=かるまる池袋", homepage:"https://karumaru.jp/ikebukuro/"},
       {name:"スパジアムジャポン(東久留米)", map:"https://maps.google.com/?q=スパジアムジャポン", homepage:"https://spajapo.com/"},
       {name:"サウナ東京(赤坂)", map:"https://maps.google.com/?q=サウナ東京", homepage:"https://saunatokyo.jp/"},
       {name:"品川サウナ", map:"https://maps.google.com/?q=品川サウナ", homepage:"https://shinagawa-sauna.com/"},
       {name:"レンブラントキャビン & スパ新橋", map:"https://maps.google.com/?q=レンブラントキャビン&スパ新橋", homepage:"https://rembrandt-cabin.com/"},
       {name:"King&Queen(所沢)", map:"https://maps.google.com/?q=King&Queen所沢", homepage:"https://kingqueen-sauna.com/"},
-      {name:"ホテルヒルトップ(成増)", map:"https://maps.google.com/?q=ホテルヒルトップ成増", homepage:"https://www.hotel-hilltop.jp/"},
-      {name:"お風呂の王様(和光)", map:"https://maps.google.com/?q=お風呂の王様和光", homepage:"https://www.ousama2603.com/shop/wako/"},
-      {name:"和(朝霞)", map:"https://maps.google.com/?q=和サウナ朝霞", homepage:"https://nagomi-sauna.com/"},
+      {name:"ホテルヒルトップ(成増)", map:"https://maps.google.com/?q=ホテルヒルトップ成増", homepage:"http://www.hotel-hilltop.com/"},
+      {name:"お風呂の王様(和光)", map:"https://maps.google.com/?q=お風呂の王様和光", homepage:"https://www.ousama2603.com/"},
+      {name:"和(朝霞)", map:"https://maps.google.com/?q=和サウナ朝霞", homepage:"https://asaka-sauna-nagomi.com/"},
       {name:"FUROBAKKA(富山)", map:"https://maps.google.com/?q=FUROBAKKA富山", homepage:"https://furobakka.jp/"},
     ];
 
